--- a/index.html
+++ b/index.html
@@ -1,13 +1,37 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Main Site</title>
+  <title>iFramed Site</title>
+  <style type="text/css">
+    .video{
+      width: 300px;
+      height: 300px;
+      background: gold;
+    }
+    .hide{
+      display: none;
+    }
+  </style>
 </head>
 <body>
 
 <p>iframed content</p>
 
+<div id="public-area">
+  <input type="text" placeholder="username"> <br>
+  <input type="password" placeholder="password"> <br>
+  <input type="button" value="login">
+</div>
+
+<div id="private-area" class="hide">
+  <div class="video">
+    video
+  </div>
+</div>
+
 <script src="https://code.jquery.com/jquery-1.12.0.js"></script>
 <script src="https://cdn.rawgit.com/js-cookie/js-cookie/master/src/js.cookie.js"></script>
+<script src="https://rawgit.com/nobitagit/safari-iframe-test/gh-pages/iframe-safari-fix-iframepage.js"></script>
+
 </body>
 </html>
